# MeshRemodel

./: .editorconfig  .gitignore  Init.py  InitGui.py  MeshRemodelCmd.py  README.md  meshremodelwb_locator.py  package.xml  pyproject.toml
Resources/icons/: ChatTranscript_0002MaGKGACR1TG2.html  CreateCoplanar.XPM  SubObjectLoftProjectFile.json  TSAL_enclosure.FCStd
Resources/icons/converted/: AddSelectionObserver.b64  CheckGeometry.b64  CreateBSpline.b64  CreateCircle.b64  CreatePointsObject.b64  CreateWireFrameObject.b64  DuplicateSelectedFacets.b64  FlattenDraftBSpline.b64  MeshBoundaryWires.b64  MoveAxial.b64  MovePoint.b64  OffsetMesh.b64  RotateObject.b64  SubObjectLoft.b64  TugBoat.b64
freecad/Mesh_Remodel/: MeshRemodelCmd.py  Workbench.py  init_gui.py  meshremodelwb_locator.py
freecad/Mesh_Remodel/Misc/: Resources.py  __init__.py
freecad/Mesh_Remodel/Qt/: Core.py  Gui.py  Widgets.py  __init__.py
freecad/Mesh_Remodel/Resources/Icons/converted/: AddOrRemoveFacet.b64  CreateArc.b64  CreateCoplanar.b64  CreateCrossSections.b64  CreateGridSurface.b64  CreateLine.b64  CreatePlane.b64  CreatePointObject.b64  CreatePolygon.b64  CreateWire.b64  ExpandMesh.b64  GoBackSelection.b64  OpenEdgeFinder.b64  RemovePoint.b64  SubShapeBinder.b64
