# SPDX-License-Identifier: LGPL-2.1-or-later
# SPDX-FileNotice: Part of the Mesh Remodel addon.

[project]
version = '0.0.0' # No need to update
name = 'Addon'    # these two properties.

requires-python = '>=3.11'

dependencies = [
    'freecad-stubs>=1.0.21' ,
    'shiboken6>=6.10.2' ,
    'requests>=2.32.5' ,
    'pyside6>=6.9.2' ,
    'numpy>=2.4.3'
]